# Todo_Console_App_Phase-II

./: .coverage  .flake8  .gitignore  CLAUDE.md  Dockerfile  FINAL_SETUP_SUMMARY.md  PostgreSQL_Setup_Summary.md  README.md  debug_password_issue.py  debug_simple.py  delete_space_file.bat  direct_api_test.py  docker-compose.yml  package-test.json  pyproject.toml  remove_problematic.ps1  remove_problematic_v2.ps1  replicate_issue.py  server_log.txt  simple_test.py  test.db  test_72byte_fix.py  test_app.py  test_app_simple.py  test_auth.py  test_auth_integration.js  test_better_auth_endpoints.py  test_current_status.py  todo_app.db  verify_fix.py
.specify/memory/: constitution.md
backend/: .dockerignore  .env  .ruff.toml  CLAUDE.md  Dockerfile  better_auth_integration.py  debug_db.py  init_db.py  main.py  pyproject.toml  requirements.txt  test_bcrypt.py  test_registration.py  todo_app.db
backend/api/: __init__.py  deps.py
backend/api/v1/: __init__.py  auth.py  tasks.py
backend/core/: __init__.py  config.py  jwt.py  logging.py
backend/database/: __init__.py  session.py
backend/models/: __init__.py  task.py  user.py
backend/schemas/: __init__.py  task.py  user.py
backend/services/: __init__.py  task_service.py  user_service.py
backend/todo_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .eslintrc.json  .gitignore  CLAUDE.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/lib/: api.ts  auth-backend.ts  auth.ts
frontend/types/: index.ts
logs/openai/: openai-2026-02-08T00-26-38.989Z-a1116d88.json  openai-2026-02-08T00-26-41.727Z-6911d193.json  openai-2026-02-08T00-26-44.196Z-04e0095c.json  openai-2026-02-08T00-26-46.132Z-99882d25.json  openai-2026-02-08T00-26-48.496Z-6ef83dc8.json  openai-2026-02-08T00-27-21.309Z-2b875bdc.json  openai-2026-02-08T00-27-23.835Z-28e1e12b.json  openai-2026-02-08T00-27-26.142Z-ddbf8637.json  openai-2026-02-08T00-27-28.577Z-90ae0ba2.json  openai-2026-02-08T00-27-31.042Z-e969fd6a.json  openai-2026-02-08T00-27-33.628Z-036cad47.json  openai-2026-02-08T00-27-35.931Z-b79a143e.json  openai-2026-02-08T00-27-37.948Z-9ec8a3e6.json  openai-2026-02-08T00-27-40.272Z-113d776e.json  openai-2026-02-08T00-27-43.185Z-568bc0ac.json  openai-2026-02-08T00-27-47.396Z-10f41477.json  openai-2026-02-08T00-27-51.197Z-c475009f.json  openai-2026-02-08T00-27-54.716Z-72b3e470.json  openai-2026-02-08T00-27-57.807Z-a03b334c.json  openai-2026-02-08T00-28-02.346Z-c97d5273.json  openai-2026-02-08T00-28-07.867Z-25a71fc9.json  openai-2026-02-08T00-28-16.322Z-34f2e4e1.json  openai-2026-02-08T00-28-25.631Z-49006771.json  openai-2026-02-08T00-28-37.031Z-5b86ad14.json  openai-2026-02-08T00-28-47.667Z-401ffb28.json  openai-2026-02-08T00-28-54.172Z-f881ad82.json  openai-2026-02-08T00-28-58.967Z-ff4888be.json  openai-2026-02-08T00-29-05.805Z-070ed48c.json  openai-2026-02-08T00-32-02.560Z-f3807011.json  openai-2026-02-08T00-32-08.090Z-9ed22fd1.json  openai-2026-02-08T00-32-13.137Z-752b4702.json  openai-2026-02-08T00-32-24.366Z-90e2022a.json  openai-2026-02-08T00-32-32.868Z-ae291bb5.json  openai-2026-02-08T00-32-45.766Z-7cffbf43.json  openai-2026-02-08T00-32-56.716Z-c296ecb2.json  openai-2026-02-08T00-33-02.877Z-a32ebadb.json  openai-2026-02-08T00-33-10.072Z-c0b282fc.json  (+311 more)
specs/: architecture.md  overview.md
src/: config.py  main.py
(+84 files in other folders)
